Remove -XX:MaxPermSize from poms and allow build with Java >= 17
-XX:MaxPermSize is deprecated since Java 8, obsolete since Java 16 and unsupported since Java 17. See:

https://docs.oracle.com/en/java/javase/16/docs/specs/man/java.html#obsolete-java-options

This fixes the docker build with Java 19.


Change-Id: Ic3427952e7b92357f462757350f8e7271c8b38f7